Added missing UTF-8 BOM

--- a/csdb/v4.16/collection/structs.ini
+++ b/csdb/v4.16/collection/structs.ini
@@ -1,4 +1,4 @@
-# from structs.3.ini
+﻿# from structs.3.ini
 
 [BoundsF]
 Desc="Constructs and returns a TRectF record with the given top-left coordinate, width and height."
