Fixed or removed broken links

--- a/csdb/v4.16/collection/date.ini
+++ b/csdb/v4.16/collection/date.ini
@@ -770,8 +770,6 @@ FPC=Y
 
 [SQLDate]
 Desc="Formats a date in SQL format."
-Credits="Inspired by code found on [About.com], converted to international date format."
-Credits_URL="http://delphi.about.com/cs/adptips2003/a/bltip0403_3.htm"
 Units=SysUtils
 SeeAlso=SQLDateToDateTime
 TestInfo=advanced
@@ -1379,7 +1377,7 @@ FPC=Y
 
 [WesternEaster]
 Desc="Returns the date of Easter Sunday for the given year in the Gregorian calendar as used by Western Christian Churches."
-Extra="<p>This routine is derived from a snippet taken from the <a href="http://swag.delphidabbler.com">SWAG Archive</a>. That snippet was converted to Pascal by Kerry Sokalsky from Modula-2 code written by Greg Vigneault in 1993.</p><p>The algorithm was taken from chapter 4 of &quot;Astronomical Formulae for Calculators&quot; 2nd edition; by Jean Meeus; publisher: Willmann-Bell Inc., ISBN 0-943396-01-8.</p><p>The algorithm is valid for all years in the Gregorian calendar, i.e. from 1583 onwards. The extreme dates of Easter are March 22 (as in 1818 and 2285) and April 25 (as in 1886, 1943, 2038).</p><p>For more details of the algorithm see <a href="http://en.wikipedia.org/wiki/Computus#Anonymous_Gregorian_algorithm">http://en.wikipedia.org/wiki/Computus#Anonymous_Gregorian_algorithm</a>.</p><p>For some useful test data see <a href="http://online-calculators.appspot.com/easter/list/">http://online-calculators.appspot.com/easter/list/</a>.</p>"
+Extra="<p>This routine is derived from a snippet taken from the SWAG Archive. That snippet was converted to Pascal by Kerry Sokalsky from Modula-2 code written by Greg Vigneault in 1993.</p><p>The algorithm was taken from chapter 4 of &quot;Astronomical Formulae for Calculators&quot; 2nd edition; by Jean Meeus; publisher: Willmann-Bell Inc., ISBN 0-943396-01-8.</p><p>The algorithm is valid for all years in the Gregorian calendar, i.e. from 1583 onwards. The extreme dates of Easter are March 22 (as in 1818 and 2285) and April 25 (as in 1886, 1943, 2038).</p><p>For more details of the algorithm see <a href="http://en.wikipedia.org/wiki/Computus#Anonymous_Gregorian_algorithm">this article</a> on Wikipedia.</p>"
 Units=SysUtils
 TestInfo=advanced
 Snip=610.dat
