--- a/csdb/v4.16/collection/graphics.ini
+++ b/csdb/v4.16/collection/graphics.ini
@@ -1,7 +1,6 @@
 ﻿[AdjustColorBrightness]
 DescEx="Adjusts the brightness of colour <var>Color</var> by a specified <var>Delta</var> in range -255..255."
-Credits="Based on code found on EFG's Delphi Reference Library's [Image Processing Page]."
-Credits_URL="http://www.efg2.com/Lab/Library/Delphi/Graphics/ImageProcessing.htm"
+Credits="Based on code found on the former EFG's Delphi Reference Library."
 Units=Windows,Graphics
 SeeAlso=AdjustBitmapBrightness
 Snip=290.dat
@@ -228,8 +227,7 @@ FPC=N
 [ContrastingColor]
 Desc="Returns a colour that contrasts well with a given background colour. The returned colour is either black or white."
 Comments="System colours are converted into actual colours before the foreground colour is calculated."
-Credits="Adapted from Andreas Filsinger's [VisibleContrast] function."
-Credits_URL="http://www.efg2.com/Lab/Library/Delphi/Graphics/AndreasFilsinger_ColorContrast.txt"
+Credits="Adapted from code by Andreas Filsinger."
 Units=Windows,Graphics
 Depends=ColorToRGBTriple
 Snip=453.dat
@@ -746,8 +744,6 @@ FPC=N
 
 [SetVistaContentFont]
 DescEx="<p>Sets the given <var>TFont</var> object to the Vista content font and adjusts the font's size accordingly.</p><p>Does nothing if (1) the operating system is not at least Vista, (2) the Vista content font is not available or (3) the font is already the required font.</p>"
-Credits="Adapted from code from the article [Creating Windows Vista Ready Applications with Delphi]."
-Credits_URL="http://www.installationexcellence.com/articles/VistaWithDelphi/Original/Index.html"
 Units=SysUtils,Graphics
 Depends=FontExists
 SeeAlso=SetVistaFont
@@ -772,8 +768,6 @@ FPC=N
 
 [SetVistaFont]
 DescEx="<p>Sets the given <var>TFont</var> object to the Vista default font and adjusts the font's size accordingly.</p><p>Does nothing if (1) the operating system is not at least Vista, (2) default Vista font is not available or (3) the font is already the Vista default font.</p>"
-Credits="Adapted from code from the article [Creating Windows Vista Ready Applications with Delphi]."
-Credits_URL="http://www.installationexcellence.com/articles/VistaWithDelphi/Original/Index.html"
 Units=SysUtils,Graphics
 Depends=FontExists
 SeeAlso=SetVistaContentFont
@@ -826,7 +820,7 @@ FPC=N
 
 [AdjustBitmapBrightness]
 DescEx="Changes the brightness of bitmap <var>Bmp</var> by a given <var>Delta</var> value in range -255..+255."
-Extra="<p>Based on code found on EFG's Delphi Reference Library's <a href="http://www.efg2.com/Lab/Library/Delphi/Graphics/ImageProcessing.htm">Image Processing Page</a>.</p> <p><strong>Note from EFG:</strong> Normally a <var>pf24bit</var> bitmap scanline would be accessed as a type <mono>TRGBTripleArray = array[Word] of TRGBTriple</mono>, but since we can treat the three color components (<var>rgbtRed</var>, <var>rgbtGreen</var>, <var>rgbtBlue</var>) in exactly the same way, we can access the scanline as a <var>pByteArray</var> of <mono>3 * Bitmap.Width</mono> bytes.</p>"
+Extra="<p>Based on code found on the former EFG's Delphi Reference Library.</p> <p><strong>Note from EFG:</strong> Normally a <var>pf24bit</var> bitmap scanline would be accessed as a type <mono>TRGBTripleArray = array[Word] of TRGBTriple</mono>, but since we can treat the three color components (<var>rgbtRed</var>, <var>rgbtGreen</var>, <var>rgbtBlue</var>) in exactly the same way, we can access the scanline as a <var>pByteArray</var> of <mono>3 * Bitmap.Width</mono> bytes.</p>"
 Units=SysUtils,Graphics
 SeeAlso=AdjustColorBrightness
 Snip=335.dat
@@ -953,7 +947,7 @@ FPC=N
 
 [CountColors]
 DescEx="<p>Counts and returns the number of unique RGB triples in the given <var>TBitmap</var> object.</p><p>The bitmap must be in <var>pf24Bit</var> format.</p>"
-Extra="<p>Uses a 2D array of <var>TBits</var> objects - when a (red, green) combination occurs for the first time, it creates a 256-bit array of bits in blue dimension. So, overall this is a fairly sparse matrix for most images.</p><p>From EFG's Delphi Reference Library's <a href="http://www.efg2.com/Lab/Library/Delphi/Graphics/Color.htm">Delphi Graphic Color Algorithms Page</a>.</p><p>EFG tested with pictures created with a known number of colours, including a specially constructed image with 1024 &#215; 1024 = 1,048,576 colours.</p>"
+Extra="<p>Uses a 2D array of <var>TBits</var> objects - when a (red, green) combination occurs for the first time, it creates a 256-bit array of bits in blue dimension. So, overall this is a fairly sparse matrix for most images.</p><p>From the former EFG's Delphi Reference Library.</p><p>EFG tested with pictures created with a known number of colours, including a specially constructed image with 1024 &#215; 1024 = 1,048,576 colours.</p>"
 Units=Classes,Graphics
 Depends=RGBTripleArray
 Snip=452.dat
@@ -1416,7 +1410,6 @@ FPC=N
 
 [RGBToHSB]
 Desc="Converts an RGB colour to the equivalent HSV (HSB) colour."
-Extra="<p>Adapted from code presented in <a href="http://delphi.about.com/od/adptips2006/qt/RgbToHsb.htm">this article</a> on About.com.</p>"
 Units=Windows,Math
 Depends=THSBColor
 SeeAlso=ColorToHSB
