--- a/csdb/v4.16/collection/maths.ini
+++ b/csdb/v4.16/collection/maths.ini
@@ -405,7 +405,7 @@ FPC=Y
 
 [DecimalToFraction]
 DescEx="<p>Converts the given decimal to a fraction. The numerator and denominator are passed out as floating point numbers in <var>FractionNumerator</var> and <var>FractionDenominator</var> respectively.</p><p><var>AccuracyFactor</var> determines how accurate the conversion is to be.</p>"
-Extra="<p>Examples of <var>AccuracyFactor</var> values: 0.0005 requires accuracy of 3 decimal places and 0.000005 requires accuracy of 5 decimal places.</p> <p>Adapted from the Turbo Pascal code presented in &quot;<a href="http://homepage.smc.edu/kennedy_john/DEC2FRAC.PDF">Algorithm To Convert A Decimal To A Fraction</a>&quot; by John Kennedy, Mathematics Department, Santa Monica College.</p>"
+Extra="<p>Examples of <var>AccuracyFactor</var> values: 0.0005 requires accuracy of 3 decimal places and 0.000005 requires accuracy of 5 decimal places.</p> <p>Adapted from the Turbo Pascal code by John Kennedy, Mathematics Department, Santa Monica College.</p>"
 Units=SysUtils,Math
 Snip=468.dat
 Delphi2=N
@@ -452,7 +452,6 @@ FPC=Y
 [DistanceBetweenPoints_Float]
 DisplayName="DistanceBetweenPoints (TPointF overload)"
 Desc="Calculates the distance between two given points with double precision floating point valued coordinates."
-Extra="<p>Formula from <a href="http://www.efg2.com/Lab/Library/Delphi/Graphics/Math.htm">EFG's Delphi Graphics: Algorithms</a> page.</p>"
 Depends=TPointF
 SeeAlso=DistanceBetweenPoints_Int
 Units=Math
@@ -478,7 +477,6 @@ FPC=Y
 [DistanceBetweenPoints_Int]
 DisplayName="DistanceBetweenPoints (TPoint overload)"
 Desc="Calculates the distance between two points with integer valued co-ordinates."
-Extra="<p>Formula from <a href="http://www.efg2.com/Lab/Library/Delphi/Graphics/Math.htm">EFG's Delphi Graphics: Algorithms</a> page.</p>"
 SeeAlso=DistanceBetweenPoints_Float
 Units=Math,Types
 Snip=494.dat
@@ -502,7 +500,7 @@ FPC=Y
 
 [GCD]
 Desc="Determines the greatest common divisor of two given non-zero integers."
-Extra="<p>Uses Euclid's method.</p><p>Note that <mono>GCD(a,b) = GCD(|a|,b) = GCD(a,|b|) = GCD(|a|,|b|)</mono>, which implies that <mono>GCD(a,b)</mono> is always positive.</p><p>Modified from Hans van Kruijssen's <a href="http://www.efg2.com/Lab/Library/UseNet/2000/0315b.txt">UseNet Post</a> as referenced on <a href="http://www.efg2.com/Lab/Library/Delphi/Algorithms/index.html">efg's Delphi Reference Library</a>.</p>"
+Extra="<p>Uses Euclid's method.</p><p>Note that <mono>GCD(a,b) = GCD(|a|,b) = GCD(a,|b|) = GCD(|a|,|b|)</mono>, which implies that <mono>GCD(a,b)</mono> is always positive.</p><p>Modified from code by Hans van Kruijssen.</p>"
 SeeAlso=GCD2,LCD
 TestInfo=advanced
 Snip=201.dat
@@ -526,7 +524,7 @@ FPC=Y
 
 [GCD2]
 Desc="Determines the greatest common divisor of two given non-zero integers."
-Extra="<p>Uses a recursive implementation of Euclid's method.</p><p>Note that <mono>GCD2(a,b) = GCD2(|a|,b) = GCD2(a,|b|) = GCD2(|a|,|b|)</mono>, which implies that <mono>GCD2(a,b)</mono> is always positive.</p><p>Modified from Hans van Kruijssen's <a href="http://www.efg2.com/Lab/Library/UseNet/2000/0315b.txt">UseNet Post</a> as referenced on <a href="http://www.efg2.com/Lab/Library/Delphi/Algorithms/index.html">efg's Delphi Reference Library</a>.</p>"
+Extra="<p>Uses a recursive implementation of Euclid's method.</p><p>Note that <mono>GCD2(a,b) = GCD2(|a|,b) = GCD2(a,|b|) = GCD2(|a|,|b|)</mono>, which implies that <mono>GCD2(a,b)</mono> is always positive.</p><p>Modified from code by Hans van Kruijssen.</p>"
 SeeAlso=GCD,LCD
 TestInfo=advanced
 Snip=416.dat
@@ -594,7 +592,7 @@ FPC=Y
 
 [LCD]
 Desc="Returns the least common divisor of two given non-zero integers."
-Extra="<p>Note that <mono>LCD(a,b) = LCD(|a|,b) = LCD(a,|b|) = LCD(|a|,|b|)</mono>, which implies that <mono>LCD(a,b)</mono> is always positive.</p><p>Modified from Hans van Kruijssen's <a href="http://www.efg2.com/Lab/Library/UseNet/2000/0315b.txt">UseNet Post</a> as referenced on <a href="http://www.efg2.com/Lab/Library/Delphi/Algorithms/index.html">efg's Delphi Reference Library</a>.</p>"
+Extra="<p>Note that <mono>LCD(a,b) = LCD(|a|,b) = LCD(a,|b|) = LCD(|a|,|b|)</mono>, which implies that <mono>LCD(a,b)</mono> is always positive.</p><p>Modified from code by Hans van Kruijssen.</p>"
 Depends=GCD
 SeeAlso=GCD,GCD2
 TestInfo=advanced
