--- a/csdb/v4.16/collection/shell.ini
+++ b/csdb/v4.16/collection/shell.ini
@@ -692,7 +692,7 @@ FPC=Y
 
 [SysImageListHandleEx]
 DescEx="<p>Returns a handle to the system image list.</p><p><var>Flag</var> specifies the size of the required images using one of the <var>SHIL_*</var> constants.</p><p>Zero is returned if the handle can't be obtained.</p>"
-Extra="<p>Constants for values that may be passed to <var>SysImageListHandle</var> via the <var>Flag</var> parameter are provided in the <var>SHIL_Enum</var> snippet.</p> <p>For information on why the <var>SHGetImageList</var> API routine is loaded by ordinal rather than name see Microsoft Knowledge Base article <a href="http://support.microsoft.com/kb/316931">KB316931</a>.</p><p>Contributed by Bill Miller</p>"
+Extra="<p>Constants for values that may be passed to <var>SysImageListHandle</var> via the <var>Flag</var> parameter are provided in the <var>SHIL_Enum</var> snippet.</p><p>Contributed by Bill Miller</p>"
 Units=SysUtils,ShellAPI,Windows,CommCtrl
 SeeAlso=SHIL_Enum
 Snip=333.dat
