--- a/csdb/v4.16/collection/string.ini
+++ b/csdb/v4.16/collection/string.ini
@@ -525,7 +525,7 @@ FPC=Y
 
 [ChangeChar]
 DescEx="Replaces all occurrences the character <var>ASearch</var> in <var>AString</var> with the <var>AReplace</var> character, and returns the resulting string."
-Extra="<p><warning>Warning:</warning> This routine replaces code points rather than characters. It is <strong>not safe</strong> for use with ANSI multi-byte character sets or, on Unicode versions of Delphi, with characters outside the Unicode <a href="http://en.wikipedia.org/wiki/Mapping_of_Unicode_character_planes">basic multilingual plane</a>.</p><p>Contributed by Bill Miller.</p>"
+Extra="<p><warning>Warning:</warning> This routine replaces code points rather than characters. It is <strong>not safe</strong> for use with ANSI multi-byte character sets or, on Unicode versions of Delphi, with characters outside the Unicode <a href="https://en.wikipedia.org/wiki/Plane_(Unicode)#Basic_Multilingual_Plane">basic multilingual plane</a>.</p><p>Contributed by Bill Miller.</p>"
 Snip=349.dat
 Delphi2=Y
 Delphi3=Y
@@ -1471,7 +1471,7 @@ FPC=Y
 
 [ReduceStr]
 DescEx="Reduces the length of string <var>S</var> by the number of characters given by <var>ReduceBy</var> and returns the result."
-Extra="<p><warning>Warning:</warning> This function actually operates on code points rather than characters, making it unsafe for use with ANSI multi-byte character sets or characters outside the Unicode <a href="http://en.wikipedia.org/wiki/Mapping_of_Unicode_character_planes">basic multilingual plane</a>.</p><p>Contributed by Bill Miller.</p>"
+Extra="<p><warning>Warning:</warning> This function actually operates on code points rather than characters, making it unsafe for use with ANSI multi-byte character sets or characters outside the Unicode <a href="https://en.wikipedia.org/wiki/Plane_(Unicode)#Basic_Multilingual_Plane">basic multilingual plane</a>.</p><p>Contributed by Bill Miller.</p>"
 Snip=350.dat
 Delphi2=Y
 Delphi3=Y
@@ -1517,7 +1517,7 @@ FPC=Y
 
 [RemoveDuplicateStrings]
 DescEx="<p>Removes duplicate strings from the given string list.</p><p>The modified string list will be sorted.</p>"
-Extra="<p>Modified from code contributed by Bill Miller, originally sourced from <a href="http://delphi.about.com/">http://delphi.about.com/</a>.</p>"
+Extra="<p>Modified from code contributed by Bill Miller.</p>"
 SeeAlso=StripDuplicateStrings
 Units=Classes
 Snip=616.dat
