--- a/csdb/v4.16/collection/sys.ini
+++ b/csdb/v4.16/collection/sys.ini
@@ -668,7 +668,7 @@ FPC=N
 
 [DeleteEnvVar]
 DescEx="<p>Deletes environment variable <var>VarName</var>.</p><p>Returns 0 on success or the relevant Windows error code on failure.</p>"
-Extra="<p>Taken from the article &quot;<a href="http://www.delphidabbler.com/articles?article=6#deleteenvvar">How to access environment variables</a>&quot; on DelphiDabbler.com.</p><p><strong>Note:</strong> An environment variable deleted by this function updates only the current process' own environment variables. Changes are lost when the process terminates. Therefore this function cannot be used to delete Windows environment variables.</p>"
+Extra="<p><strong>Note:</strong> An environment variable deleted by this function updates only the current process' own environment variables. Changes are lost when the process terminates. Therefore this function cannot be used to delete Windows environment variables.</p>"
 SeeAlso=GetAllEnvVars,GetEnvVar,SetEnvVar,SetEnvVarValue,GetEnvironmentBlockSize
 Units=Windows
 Snip=595.dat
@@ -747,7 +747,7 @@ FPC=Y
 
 [GetAllEnvVars]
 DescEx="<p>Stores all the environment variables in the current process' environment block in the given string list in <mono>Name=Value</mono> format.</p>"
-Extra="<p>Often there will be an entry in the environment block not in the form <mono>Name=Value</mono> (it may have format <mono>=Value</mono>). The data can be read from the string list via its <var>Items[]</var> property, but not from the <var>Names[]</var> property.</p><p>Adapted from the article &quot;<a href="http://www.delphidabbler.com/articles?article=6#getallenvvars">How to access environment variables</a>&quot; on DelphiDabbler.com.</p>"
+Extra="<p>Often there will be an entry in the environment block not in the form <mono>Name=Value</mono> (it may have format <mono>=Value</mono>). The data can be read from the string list via its <var>Items[]</var> property, but not from the <var>Names[]</var> property.</p>"
 SeeAlso=GetEnvVar,SetEnvVar,SetEnvVarValue,GetEnvironmentBlockSize,DeleteEnvVar
 Depends=MultiSzToStrings
 Units=Classes,Windows
@@ -827,7 +827,6 @@ FPC=Y
 
 [GetEnvVar]
 DescEx="<p>Returns the value of the given environment variable.</p><p>If the environment variable does not exist then the empty string is returned.</p>"
-Extra="<p>Taken from the article &quot;<a href="http://www.delphidabbler.com/articles?article=6#getenvvarvalue">How to access environment variables</a>&quot; on DelphiDabbler.com.</p>"
 SeeAlso=GetAllEnvVars,SetEnvVar,SetEnvVarValue,GetEnvironmentBlockSize,DeleteEnvVar
 Units=Windows
 Snip=598.dat
@@ -865,7 +864,7 @@ FPC=Y
 
 [GetMacAddress]
 Desc="Returns the MAC address of the first ethernet adapter on the computer or the empty string if there is no adapter or if the function fails."
-Extra="<p>Based on code at MSDN knowledge base article <a href="http://support.microsoft.com/kb/q118623/">Q118623</a>.</p> <p><warning>Warning 1</warning>: Does not work on Windows Vista, Windows 2008 Server or later. This code depends on <mono>Netbios</mono> which is not supported on these OSs.</p> <p><warning>Warning 2</warning>: According to MSDN this code may not work reliably on the Windows 9x platform.</p>"
+Extra="<p><warning>Warning 1</warning>: Does not work on Windows Vista, Windows 2008 Server or later. This code depends on <mono>Netbios</mono> which is not supported on these OSs.</p> <p><warning>Warning 2</warning>: According to MSDN this code may not work reliably on the Windows 9x platform.</p>"
 Units=SysUtils,Windows,Nb30
 Snip=090.dat
 Delphi2=N
@@ -1020,7 +1019,7 @@ FPC=Y
 
 [RefreshEnvironment]
 Desc="Notifies all windows that the system environment variables have been changed."
-Extra="<p>If you modify environment variables in the registry the rest of the system will not notice unless you notify them. Use this routine to do that. See Microsoft's article &quot;<a href="http://support.microsoft.com/kb/104011">How to propagate environment variables to the system</a>&quot; for more information.</p><p><strong>Note:</strong> You must change environment variables in the registry for the changes to have a global effect - changing your own application's environment won't work.</p>
+Extra="<p>If you modify environment variables in the registry the rest of the system will not notice unless you notify them. Use this routine to do that.</p><p><strong>Note:</strong> You must change environment variables in the registry for the changes to have a global effect - changing your own application's environment won't work.</p>
 <p>Contributed by Michael Rockett. Adapted for 64 bit by DelphiDabbler.</p>"
 Units=Windows,Messages
 Snip=599.dat
@@ -1044,7 +1043,7 @@ FPC=Y
 
 [SetEnvVar]
 DescEx="<p>Sets the value of environment variable <var>VarName</var> to the value <var>VarValue</var>.</p><p>Returns 0 on success or the relevant Windows error code on failure.</p>"
-Extra="<p>Taken from the article &quot;<a href="http://www.delphidabbler.com/articles?article=6#setenvvarvalue">How to access environment variables</a>&quot; on DelphiDabbler.com.</p><p><strong>Note:</strong> An environment variable created or modified using this method updates only the current process' own environment variables. Changes are lost when the process terminates. Therefore this function cannot be used to modify the Windows environment variables.</p>"
+Extra="<p><strong>Note:</strong> An environment variable created or modified using this method updates only the current process' own environment variables. Changes are lost when the process terminates. Therefore this function cannot be used to modify the Windows environment variables.</p>"
 SeeAlso=GetAllEnvVars,GetEnvVar,SetEnvVarValue,GetEnvironmentBlockSize,DeleteEnvVar
 Units=Windows
 Snip=600.dat
