--- a/csdb/v4.16/collection/windows.ini
+++ b/csdb/v4.16/collection/windows.ini
@@ -71,8 +71,6 @@ FPC=Y
 [DisableTreeViewToolTips]
 Desc="Disables the tool tips that are displayed in the given treeview control when the mouse is hovered over an item that is cropped because it is too large to display."
 Comments="This routine is of use with earlier versions of Delphi in which the tree view component does not have a property to switch tool tips on and off."
-Credits="Code taken from an [article] on the About Delphi web site."
-Credits_URL="http://delphi.about.com/od/delphitips2007/qt/tvs_notooltips.htm"
 Units=Windows,ComCtrls,CommCtrl
 Snip=507.dat
 Delphi2=N
@@ -261,7 +259,6 @@ FPC=Y
 [MemoCursorPos]
 DescEx="Returns a <var>TPoint</var> value containing the coordinates of the cursor in the given memo control."
 Credits="Based on code contributed by Shlomo Abuisak."
-Extra="Based on code contributed by Shlomo Abuisak. See also <a href="http://www.delphidabbler.com/tips/125">Tip #125</a> on <a href="http://www.delphidabbler.com/">DelphiDabbler.com</a>."
 Units=Messages,Windows,StdCtrls
 Snip=334.dat
 Delphi2=Y
@@ -501,7 +498,7 @@ FPC=Y
 
 [ContainsFocus]
 Desc="Returns True if the specified control, or one of its child controls, currently has the input focus."
-Extra="<p>Adapted from the article &quot;<a href="http://delphi.about.com/od/delphitips2007/qt/contains_focus.htm">Implementing 'Contains Focus' for Delphi's Container Controls: TPanel, TGroupBox</a>&quot; on About.com.</p>"
+Extra="<p>Adapted from the article &quot;<a href="https://www.thoughtco.com/how-to-move-and-resize-controls-at-run-time-4092542">Implementing 'Contains Focus' for Delphi's Container Controls: TPanel, TGroupBox</a>&quot; on About.com.</p>"
 Depends=FocusedControl
 SeeAlso=FocusedControl
 Units=Windows,Controls
