--- a/csdb/v4.16/collection/utils.ini
+++ b/csdb/v4.16/collection/utils.ini
@@ -524,7 +524,7 @@ FPC=Y
 
 [CheckBDEInstalled]
 Desc="Checks if the BDE is installed."
-Extra="<p>For alternative approaches see <a href="http://www.delphidabbler.com/tips/28">Tip #28</a>, &quot;How to check if the BDE is installed&quot;, on <a href="http://www.delphidabbler.com/">DelphiDabbler.com</a>.</p><p><warning>Warning:</warning> Some editions of Delphi (e.g. Delphi 6 personal) do not provide the <mono>BDE</mono> unit, and so the routine will not compile on them.</p><p>Contributed by mdeltas.</p>"
+Extra="<p><warning>Warning:</warning> Some editions of Delphi (e.g. Delphi 6 personal) do not provide the <mono>BDE</mono> unit, and so the routine will not compile on them.</p><p>Contributed by mdeltas.</p>"
 Units=BDE
 Snip=256.dat
 Delphi2=Y
@@ -907,7 +907,7 @@ FPC=Y
 
 [FreeStringsObjects]
 DescEx="<p>Frees all objects stored in the <var>Objects[]</var> property of the given string list.</p>"
-Extra="<p>Based on code from the article <a href="http://delphi.about.com/od/delphitips2009/qt/free-strings-objects.htm">Freeing Objects in Delphi's TStrings Items</a> on About.com.</p><p><strong>Note:</strong> From Delphi 2009 <var>TStringList</var> has an overloaded constructor that takes an <var>OwnsObjects</var> parameter that, when True, frees the objects in <var>Objects[]</var> when the string list is destroyed.</p>"
+Extra="<p><strong>Note:</strong> From Delphi 2009 <var>TStringList</var> has an overloaded constructor that takes an <var>OwnsObjects</var> parameter that, when True, frees the objects in <var>Objects[]</var> when the string list is destroyed.</p>"
 Units=Classes
 Snip=534.dat
 Delphi2=Y
