--- a/csdb/v4.16/collection/winsys.ini
+++ b/csdb/v4.16/collection/winsys.ini
@@ -256,8 +256,6 @@ FPC=Y
 
 [ScreenResolution]
 DescEx="Returns the current screen resolution in a <var>TSize</var> record whose <var>cx</var> and <var>cy</var> fields give the screen width and height respectively."
-Credits="Inspired by a similar routine on [EFG's Delphi Graphics: Algorithms] page."
-Credits_URL="http://www.efg2.com/Lab/Library/Delphi/Graphics/Algorithms.htm"
 Units=Windows,Types
 Snip=509.dat
 Delphi2=N
@@ -397,7 +395,7 @@ FPC=Y
 
 [IsRemoteSession]
 Desc="Checks if the program is running under Windows Terminal Server in a remote client session."
-Extra="<p><strong>Note:</strong> This function requires Windows NT4 SP4 or later. It does not work on the Windows 9x platform.</p><p>Taken from code published in an <a href="http://delphi.about.com/od/delphitips2008/qt/isremotesession.htm">article</a> on About.com.</p>"
+Extra="<p><strong>Note:</strong> This function requires Windows NT4 SP4 or later. It does not work on the Windows 9x platform.</p>"
 Units=Windows
 Snip=302.dat
 Delphi2=Y
