Removed Credits and Comments keys.

--- a/csdb/v4.16/collection/string.ini
+++ b/csdb/v4.16/collection/string.ini
@@ -1188,9 +1188,7 @@ FPC=Y
 
 [StripLastChar]
 DescEx="Removes the last character from the string <var>S</var> and returns the resulting string. If <var>S</var> is empty then it is returned unchanged."
-Credits="Contributed by Guru Kathiresan."
-Comments="NOTE: This routine is not suitable for use with multi-byte character sets."
-Extra="<strong>Note:</strong> This routine is not suitable for use with multi-byte character sets."
+Extra="<p><strong>Note:</strong> This routine is not suitable for use with multi-byte character sets.</p><p>Contributed by Guru Kathiresan.</p>"
 SeeAlso=LastChar
 Snip=382.dat
 Delphi2=Y
