--- a/csdb/v4.16/collection/io.ini
+++ b/csdb/v4.16/collection/io.ini
@@ -144,7 +144,7 @@ FPC=Y
 [FileHasWatermark_A]
 DisplayName="FileHasWatermark (byte array overload)"
 DescEx="<p>Checks if the file named <var>FileName</var> contains the sequence of bytes given in the byte arrary <var>Watermark</var> starting at the byte offset given by the (optional) <var>Offset</var> parameter.</p>"
-Extra="<p>Taken from <a href="http://delphidabbler.blogspot.co.uk/2012/10/checking-file-preambles-and-watermarks.html">Checking File Preambles and Watermarks</a> posted on <a href="http://delphidabbler.blogspot.co.uk/">DelphiDabbler's Blog</a>.</p>"
+Extra="<p>Taken from <a href="http://delphidabbler.blogspot.co.uk/2012/10/checking-file-preambles-and-watermarks.html">Checking File Preambles and Watermarks</a> on DelphiDabbler's blog.</p>"
 Units=SysUtils,Classes
 Depends=StreamHasWatermark
 SeeAlso=FileHasWatermark_B,StreamHasWatermark
@@ -170,7 +170,7 @@ FPC=Y
 [FileHasWatermark_B]
 DisplayName="FileHasWatermark (ANSI string overload)"
 DescEx="<p>Checks if the file named <var>FileName</var> contains ANSI text <var>Watermark</var> starting at the byte offset given by the (optional) <var>Offset</var> parameter.</p>"
-Extra="<p>Taken from <a href="http://delphidabbler.blogspot.co.uk/2012/10/checking-file-preambles-and-watermarks.html">Checking File Preambles and Watermarks</a> posted on <a href="http://delphidabbler.blogspot.co.uk/">DelphiDabbler's Blog</a>.</p>"
+Extra="<p>Taken from <a href="http://delphidabbler.blogspot.co.uk/2012/10/checking-file-preambles-and-watermarks.html">Checking File Preambles and Watermarks</a> on DelphiDabbler's Blog</a>.</p>"
 Depends=FileHasWatermark_A
 SeeAlso=FileHasWatermark_A,StreamHasWatermark
 Snip=518.dat
@@ -194,7 +194,7 @@ FPC=Y
 
 [StreamHasWatermark]
 DescEx="<p>Checks if the given stream has the given &quot;watermark&quot; (i.e. sequence of bytes) starting from the current position in the stream.</p><p>The stream position is unaltered.</p>"
-Extra="<p>For maximum flexibility the function checks the stream from the current position. So, to check from the start of a stream make sure it's <var>Position</var> property is set to 0 before calling the routine.</p><p>For examples of use see <a href="http://delphidabbler.blogspot.co.uk/2012/10/checking-file-preambles-and-watermarks.html">Checking File Preambles and Watermarks</a> posted on <a href="http://delphidabbler.blogspot.co.uk/">DelphiDabbler's Blog</a>.</p>"
+Extra="<p>For maximum flexibility the function checks the stream from the current position. So, to check from the start of a stream make sure it's <var>Position</var> property is set to 0 before calling the routine.</p><p>For examples of use see <a href="http://delphidabbler.blogspot.co.uk/2012/10/checking-file-preambles-and-watermarks.html">Checking File Preambles and Watermarks</a> posted on DelphiDabbler's Blog</a>.</p>"
 Units=Classes
 SeeAlso=FileHasWatermark_A,FileHasWatermark_B
 Snip=516.dat
