Fix error causing database corruption
The corruption was caused by an error in move from two string management categories to one.

--- a/csdb/collection/categories.ini
+++ b/csdb/collection/categories.ini
@@ -46,13 +46,17 @@ Ini=multimedia.ini
 Desc=Registry
 Ini=registry.ini
 
-[string-1]
-Desc=String Management (A..M)
-Ini=string-am.ini
+[string]
+Desc=String Management
+Ini=string.ini
 
-[string-2]
-Desc=String Management (N..Z)
-Ini=string-nz.ini
+#[string-1]
+#Desc=String Management (A..M)
+#Ini=string-am.ini
+
+#[string-2]
+#Desc=String Management (N..Z)
+#Ini=string-nz.ini
 
 [system]
 Desc=System
