Remove all comments from .ini files

--- a/csdb/collection/consts.ini
+++ b/csdb/collection/consts.ini
@@ -1,6 +1,4 @@
-﻿# from consts.3.ini
-
-[SHIL_Enum]
+﻿[SHIL_Enum]
 Kind=const
 DisplayName=SHIL_* Constants
 DescEx="Constants that can be passed as flags to specify the required image type in calls to the <var>SysImageListHandleEx</var> routine."
