--- a/csdb/collection/structs.ini
+++ b/csdb/collection/structs.ini
@@ -1,6 +1,4 @@
-﻿# from structs.3.ini
-
-[BoundsF]
+﻿[BoundsF]
 DescEx="Constructs and returns a <var>TRectF</var> record with the given top-left coordinate, width and height."
 SeeAlso=RectF,TRectF
 Depends=TRectF
@@ -177,8 +175,6 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 FPC=Y
-
-# from structs.4.ini
 
 [TRangeEx]
 Kind=class
