--- a/csdb/collection/types.ini
+++ b/csdb/collection/types.ini
@@ -1,6 +1,4 @@
-﻿# from types.3.ini
-
-[RawByteString]
+﻿[RawByteString]
 Kind=type
 DescEx="Definition of <var>RawByteString</var> type for non-Unicode compilers."
 Extra="<p><strong>Note:</strong> This type is defined in the <var>System</var> unit on Unicode compilers.</p>"
