--- a/csdb/collection/wb.ini
+++ b/csdb/collection/wb.ini
@@ -1,6 +1,4 @@
-﻿# from wb.3.ini
-
-[WBAppendHTML]
+﻿[WBAppendHTML]
 DescEx="<p>Appends the given HTML to the end of the given web browser control's current document body.</p><p>Does nothing if no document is loaded, if the document does not support the DOM, or if the document is a frameset.</p>"
 Extra="<p>Developed from code submitted by Bill Miller.</p>"
 Units=SysUtils,SHDocVw,MSHTML
