Add header comments to every .ini file

--- a/csdb/collection/categories.ini
+++ b/csdb/collection/categories.ini
@@ -1,4 +1,11 @@
-﻿[arrays]
+﻿# DelphiDabbler Code Snippets Database v2
+#
+# Master categories file
+#
+# This file is licensed under the MIT license, copyright © 2020 Peter Johnson,
+# https://gravatar.com/delphidabbler
+
+[arrays]
 Desc=Arrays
 Ini=arrays.ini
 
