--- a/csdb/collection/consts.ini
+++ b/csdb/collection/consts.ini
@@ -1,4 +1,11 @@
-﻿[SHIL_Enum]
+﻿# DelphiDabbler Code Snippets Database v2
+#
+# Constants category file
+#
+# This file is licensed under the MIT license, copyright © 2020 Peter Johnson,
+# https://gravatar.com/delphidabbler
+
+[SHIL_Enum]
 Kind=const
 DisplayName=SHIL_* Constants
 DescEx="Constants that can be passed as flags to specify the required image type in calls to the <var>SysImageListHandleEx</var> routine."
