--- a/csdb/collection/date.ini
+++ b/csdb/collection/date.ini
@@ -1,4 +1,11 @@
-﻿[AddDays]
+﻿# DelphiDabbler Code Snippets Database v2
+#
+# Date and Time category file
+#
+# This file is licensed under the MIT license, copyright © 2020 Peter Johnson,
+# https://gravatar.com/delphidabbler
+
+[AddDays]
 DescEx="<p>Adds the number of days, <var>Days</var>, to the given date, <var>DateTime</var> and returns the result.</p><p>To subtract days, pass a negative value for <var>Days</var>.</p>"
 Credits="Contributed by Bill Miller."
 SeeAlso=DiffDays
