--- a/csdb/collection/drive.ini
+++ b/csdb/collection/drive.ini
@@ -1,4 +1,11 @@
-﻿[CurentDrive]
+﻿# DelphiDabbler Code Snippets Database v2
+#
+# Drive Management category file
+#
+# This file is licensed under the MIT license, copyright © 2020 Peter Johnson,
+# https://gravatar.com/delphidabbler
+
+[CurentDrive]
 Desc="Returns the letter that identifies the current drive."
 Credits="Modified from Bill Miller's snippets collection."
 Snip=352.dat
