--- a/csdb/collection/file.ini
+++ b/csdb/collection/file.ini
@@ -1,4 +1,11 @@
-﻿[CopyFile]
+﻿# DelphiDabbler Code Snippets Database v2
+#
+# File Management category file
+#
+# This file is licensed under the MIT license, copyright © 2020 Peter Johnson,
+# https://gravatar.com/delphidabbler
+
+[CopyFile]
 DescEx="Copies <var>Source</var> file to <var>Dest</var> file, preserving modification date."
 Units=Classes,SysUtils
 SeeAlso=CopyFiles
