--- a/csdb/collection/graphics.ini
+++ b/csdb/collection/graphics.ini
@@ -1,4 +1,11 @@
-﻿[AdjustColorBrightness]
+﻿# DelphiDabbler Code Snippets Database v2
+#
+# Graphics category file
+#
+# This file is licensed under the MIT license, copyright © 2020 Peter Johnson,
+# https://gravatar.com/delphidabbler
+
+[AdjustColorBrightness]
 DescEx="Adjusts the brightness of colour <var>Color</var> by a specified <var>Delta</var> in range -255..255."
 Credits="Based on code found on the former EFG's Delphi Reference Library."
 Units=Windows,Graphics
