--- a/csdb/collection/hex.ini
+++ b/csdb/collection/hex.ini
@@ -1,4 +1,11 @@
-﻿[AddHexPrefix]
+﻿# DelphiDabbler Code Snippets Database v2
+#
+# Hex Utilities category file
+#
+# This file is licensed under the MIT license, copyright © 2020 Peter Johnson,
+# https://gravatar.com/delphidabbler
+
+[AddHexPrefix]
 Desc="Adds a valid hex prefix to the given string of hex digits."
 Comments="The hex prefix is '$' when compiled on Delphi or '0x' when compiled on C++ Builder."
 Units=SysUtils
