--- a/csdb/collection/maths.ini
+++ b/csdb/collection/maths.ini
@@ -1,4 +1,11 @@
-﻿[AllDigitsDifferent]
+﻿# DelphiDabbler Code Snippets Database v2
+#
+# Mathematics category file
+#
+# This file is licensed under the MIT license, copyright © 2020 Peter Johnson,
+# https://gravatar.com/delphidabbler
+
+[AllDigitsDifferent]
 Desc="Checks if all the digits of the given integer are different to each other."
 Comments="An example of an integer with all digits different is 15862."
 SeeAlso=AllDigitsSame
