--- a/csdb/collection/shell.ini
+++ b/csdb/collection/shell.ini
@@ -1,4 +1,11 @@
-﻿[AddToRecentDocs]
+﻿# DelphiDabbler Code Snippets Database v2
+#
+# Windows Shell category file
+#
+# This file is licensed under the MIT license, copyright © 2020 Peter Johnson,
+# https://gravatar.com/delphidabbler
+
+[AddToRecentDocs]
 Desc="Adds the given file to the Recent Documents folder."
 Units=ShlObj
 SeeAlso=ClearRecentDocs
