--- a/csdb/collection/string.ini
+++ b/csdb/collection/string.ini
@@ -1,4 +1,11 @@
-﻿[AddThousandSeparator]
+﻿# DelphiDabbler Code Snippets Database v2
+#
+# String Management category file
+#
+# This file is licensed under the MIT license, copyright © 2020 Peter Johnson,
+# https://gravatar.com/delphidabbler
+
+[AddThousandSeparator]
 DescEx="<p>Adds the &quot;thousands separator&quot; specified by <var>C</var> at the correct location(s) in string <var>S</var> and returns the result.</p><p><var>S</var> is assumed to be the string representation of a positive whole number.</p>"
 Credits="Contributed by Bill Miller."
 SeeAlso=AddDefThousandSeparator
