--- a/csdb/collection/structs.ini
+++ b/csdb/collection/structs.ini
@@ -1,4 +1,11 @@
-﻿[BoundsF]
+﻿# DelphiDabbler Code Snippets Database v2
+#
+# Structures category file
+#
+# This file is licensed under the MIT license, copyright © 2020 Peter Johnson,
+# https://gravatar.com/delphidabbler
+
+[BoundsF]
 DescEx="Constructs and returns a <var>TRectF</var> record with the given top-left coordinate, width and height."
 SeeAlso=RectF,TRectF
 Depends=TRectF
