--- a/csdb/collection/sys.ini
+++ b/csdb/collection/sys.ini
@@ -1,4 +1,11 @@
-﻿[DebuggerPresent]
+﻿# DelphiDabbler Code Snippets Database v2
+#
+# System category file
+#
+# This file is licensed under the MIT license, copyright © 2020 Peter Johnson,
+# https://gravatar.com/delphidabbler
+
+[DebuggerPresent]
 Desc="Indicates whether the calling process is running within a debugger."
 Credits="Contributed by DennisLV."
 Units=Windows
