--- a/csdb/collection/types.ini
+++ b/csdb/collection/types.ini
@@ -1,4 +1,11 @@
-﻿[RawByteString]
+﻿# DelphiDabbler Code Snippets Database v2
+#
+# Types category file
+#
+# This file is licensed under the MIT license, copyright © 2020 Peter Johnson,
+# https://gravatar.com/delphidabbler
+
+[RawByteString]
 Kind=type
 DescEx="Definition of <var>RawByteString</var> type for non-Unicode compilers."
 Extra="<p><strong>Note:</strong> This type is defined in the <var>System</var> unit on Unicode compilers.</p>"
