--- a/csdb/collection/utils.ini
+++ b/csdb/collection/utils.ini
@@ -1,4 +1,11 @@
-﻿[BytesToGB]
+﻿# DelphiDabbler Code Snippets Database v2
+#
+# Utilities category file
+#
+# This file is licensed under the MIT license, copyright © 2020 Peter Johnson,
+# https://gravatar.com/delphidabbler
+
+[BytesToGB]
 Desc="Converts the given number of bytes to gigabytes."
 SeeAlso=BytesToGBStr,BytesToKB,BytesToMB
 Snip=295.dat
