--- a/csdb/collection/wb.ini
+++ b/csdb/collection/wb.ini
@@ -1,4 +1,11 @@
-﻿[WBAppendHTML]
+﻿# DelphiDabbler Code Snippets Database v2
+#
+# TWebBrowser category file
+#
+# This file is licensed under the MIT license, copyright © 2020 Peter Johnson,
+# https://gravatar.com/delphidabbler
+
+[WBAppendHTML]
 DescEx="<p>Appends the given HTML to the end of the given web browser control's current document body.</p><p>Does nothing if no document is loaded, if the document does not support the DOM, or if the document is a frameset.</p>"
 Extra="<p>Developed from code submitted by Bill Miller.</p>"
 Units=SysUtils,SHDocVw,MSHTML
