--- a/csdb/collection/arrays.ini
+++ b/csdb/collection/arrays.ini
@@ -1,4 +1,11 @@
-﻿[ArrayToStringList]
+﻿# DelphiDabbler Code Snippets Database v2
+#
+# Arrays category file
+#
+# This file is licensed under the MIT license, copyright © 2020 Peter Johnson,
+# https://gravatar.com/delphidabbler
+
+[ArrayToStringList]
 DescEx="<p>Copies the elements of string array <var>Strings</var> to string list <var>SL</var>, replacing any existing contents of <var>SL</var>.</p>"
 SeeAlso=StringListToArray
 Units=Classes
