--- a/csdb/collection/encoding.ini
+++ b/csdb/collection/encoding.ini
@@ -1,4 +1,11 @@
-﻿[BytesToAnsiString]
+﻿# DelphiDabbler Code Snippets Database v2
+#
+# Encoding category file
+#
+# This file is licensed under the MIT license, copyright © 2020 Peter Johnson,
+# https://gravatar.com/delphidabbler
+
+[BytesToAnsiString]
 DescEx="Converts the given array of bytes to an ANSI raw byte string, which is returned. The returned string has the code page specified by <var>CodePage</var>."
 Credits="Based on code from the Stack Overflow posting [How can I convert TBytes to RawByteString?]."
 Credits_URL="http://stackoverflow.com/questions/773297/how-can-i-convert-tbytes-to-rawbytestring"
