--- a/csdb/collection/io.ini
+++ b/csdb/collection/io.ini
@@ -1,4 +1,11 @@
-﻿[FileToString]
+﻿# DelphiDabbler Code Snippets Database v2
+#
+# File and Stream I/O category file
+#
+# This file is licensed under the MIT license, copyright © 2020 Peter Johnson,
+# https://gravatar.com/delphidabbler
+
+[FileToString]
 DescEx="Reads text in the default ANSI encoding from file named by <var>FileName</var> into a string, which is returned."
 Units=Classes,SysUtils
 Depends=StreamToString
