--- a/csdb/collection/multimedia.ini
+++ b/csdb/collection/multimedia.ini
@@ -1,4 +1,11 @@
-﻿[PlaySound]
+﻿# DelphiDabbler Code Snippets Database v2
+#
+# Multi Media category file
+#
+# This file is licensed under the MIT license, copyright © 2020 Peter Johnson,
+# https://gravatar.com/delphidabbler
+
+[PlaySound]
 Desc="Plays sound from the given wave (.wav) file asynchronously."
 Credits="From Bill Miller's snippets collection."
 Units=MMSystem
