--- a/csdb/collection/registry.ini
+++ b/csdb/collection/registry.ini
@@ -1,4 +1,11 @@
-﻿[GetRegistryString]
+﻿# DelphiDabbler Code Snippets Database v2
+#
+# Registry category file
+#
+# This file is licensed under the MIT license, copyright © 2020 Peter Johnson,
+# https://gravatar.com/delphidabbler
+
+[GetRegistryString]
 DescEx="<p>Reads and returns the value named by <var>Name</var> from the registry sub-key <var>SubKey</var> in root key <var>RootKey</var>.</p><p>String, expanded string and integer value types are all handled, with integer values being converted to strings. Other values types are not supported and cause an exception to be raised.</p><p>The empty string is returned if the named value does not exist.</p>"
 Units=Windows,SysUtils,Registry
 Snip=067.dat
