--- a/csdb/collection/web.ini
+++ b/csdb/collection/web.ini
@@ -1,4 +1,11 @@
-﻿[BrowseURL]
+﻿# DelphiDabbler Code Snippets Database v2
+#
+# Internet category file
+#
+# This file is licensed under the MIT license, copyright © 2020 Peter Johnson,
+# https://gravatar.com/delphidabbler
+
+[BrowseURL]
 DescEx="<p>Activates the default browser or email client for a given URL. Returns True if the browser/email client is successfully launched and False if not.</p><p>Raises an exception if the URL doesn't conform to a known protocol.</p>"
 Units=SysUtils
 Depends=IsValidURLProtocol,ExecAssociatedApp
