--- a/csdb/collection/winsys.ini
+++ b/csdb/collection/winsys.ini
@@ -1,4 +1,11 @@
-﻿[CommonFilesFolder]
+﻿# DelphiDabbler Code Snippets Database v2
+#
+# Windows System category file
+#
+# This file is licensed under the MIT license, copyright © 2020 Peter Johnson,
+# https://gravatar.com/delphidabbler
+
+[CommonFilesFolder]
 Desc="Returns the Windows common files directory."
 Depends=GetCurrentVersionRegStr
 SeeAlso=ProgramFilesFolder,SystemFolder,TempFolder,WindowsFolder,GetDesktopFolder
