--- a/csdb/tests/Cat-Drive/TestDriveCat.dproj
+++ b/csdb/tests/Cat-Drive/TestDriveCat.dproj
@@ -10,16 +10,16 @@
 			<Base>true</Base>
 		</PropertyGroup>
 		<PropertyGroup Condition="'$(Base)'!=''">
-			<DCC_DependencyCheckOutputName>..\..\Exe\TestDriveCat.exe</DCC_DependencyCheckOutputName>
+			<DCC_DependencyCheckOutputName>_build\Exe\TestDriveCat.exe</DCC_DependencyCheckOutputName>
 			<DCC_ImageBase>00400000</DCC_ImageBase>
 			<DCC_SymbolReferenceInfo>1</DCC_SymbolReferenceInfo>
 			<DCC_UnitAlias>WinTypes=Windows;WinProcs=Windows;DbiTypes=BDE;DbiProcs=BDE;DbiErrs=BDE;$(DCC_UnitAlias)</DCC_UnitAlias>
 			<DCC_Platform>x86</DCC_Platform>
-			<DCC_ExeOutput>..\..\Exe</DCC_ExeOutput>
+			<DCC_ExeOutput>_build\Exe</DCC_ExeOutput>
 			<DCC_K>false</DCC_K>
 			<DCC_N>true</DCC_N>
 			<DCC_S>false</DCC_S>
-			<DCC_DcuOutput>..\..\Bin\Cat-Drive</DCC_DcuOutput>
+			<DCC_DcuOutput>_build\Bin\Cat-Drive</DCC_DcuOutput>
 			<DCC_E>false</DCC_E>
 			<DCC_F>false</DCC_F>
 		</PropertyGroup>
