--- a/csdb/tests/Cat-Hex/TestHexCat.dproj
+++ b/csdb/tests/Cat-Hex/TestHexCat.dproj
@@ -10,8 +10,8 @@
 			<Base>true</Base>
 		</PropertyGroup>
 		<PropertyGroup Condition="'$(Base)'!=''">
-			<DCC_ExeOutput>..\..\Exe</DCC_ExeOutput>
-			<DCC_DependencyCheckOutputName>..\..\Exe\TestHexCat.exe</DCC_DependencyCheckOutputName>
+			<DCC_ExeOutput>_build\Exe</DCC_ExeOutput>
+			<DCC_DependencyCheckOutputName>_build\Exe\TestHexCat.exe</DCC_DependencyCheckOutputName>
 			<DCC_ImageBase>00400000</DCC_ImageBase>
 			<DCC_UnitAlias>WinTypes=Windows;WinProcs=Windows;DbiTypes=BDE;DbiProcs=BDE;DbiErrs=BDE;$(DCC_UnitAlias)</DCC_UnitAlias>
 			<DCC_Define>_CONSOLE_TESTRUNNER;$(DCC_Define)</DCC_Define>
@@ -20,7 +20,7 @@
 			<DCC_K>false</DCC_K>
 			<DCC_N>true</DCC_N>
 			<DCC_S>false</DCC_S>
-			<DCC_DcuOutput>..\..\Bin\Cat-Hex</DCC_DcuOutput>
+			<DCC_DcuOutput>_build\Bin\Cat-Hex</DCC_DcuOutput>
 			<DCC_E>false</DCC_E>
 			<DCC_F>false</DCC_F>
 		</PropertyGroup>
